--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <button id="tab-btn">SAVE TAB</button>
     <button id="delete-btn">DELETE ALL</button>
     <ul id="ul-el"></ul>
-    <script src="index3.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
